--- a/data-x-2/Assignment1-Aman-Shah.ipynb
+++ b/data-x-2/Assignment1-Aman-Shah.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "## Data Science and Machine Learning Lab 2\n",
-    "## Assignment 1\n",
-    "## Aman Shah, aman.shah@plaksha.org"
+    "## Assignment 1\n"
    ]
   },
   {
